# strain_stress_curve

./: INFO.md  README.md  requirements.txt  setup.cfg
src/: dataset.py  globals.py
src/nn/: activ.py  mlp.py
src/ssc/: data.py  dataset.py  processing.py  simulation.py  utils.py
src/ssc/nn/: cnn.py  mlp.py  models.py  utils.py
test_data/: ssc_data_header.csv  ssc_data_no_header.csv
test_data/test_dataset/: ssc1.csv  ssc2.csv  ssc3.csv
tests/: test_data.py  test_processing.py  test_simulation.py
tests/myscript/: test_helloworld.py
