[metadata]
name = Project Name
version = 0.0.0
description = project description
author = Davide Belfiori

[options]
package_dir=
    =src
packages=find:
install_requires=
    package1
    package2
    ...
python_requires= >=3.8
zip_safe=False

[options.packages.find]
where=src

[options.extras_require]
testing=
    pytest