[metadata]
name = Strain_Stress_Curve
version = 0.0.1
description = Strain-Stress curve correction with AI
author = Davide Belfiori

[options]
package_dir=
    =src
packages=find:
install_requires=
    torch
    numpy
    matplotlib
    pandas
python_requires= >=3.8
zip_safe=False

[options.packages.find]
where=src

[options.extras_require]
testing=
    pytest